--- a/cv-css.css
+++ b/cv-css.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #2980b9;
+	background-color: #5929BA;
 }
 
 .gauche {
@@ -18,7 +18,7 @@ body {
 	width: 240px;
 	height: auto;
 	border: 1px solid black;
-	background-color: #bdc3c7;
+	background-color: #7A42A6;
 
 }
 
@@ -26,7 +26,7 @@ body {
 	float: left;
 	top:0;
 	right:0;
-	width:70%;
+	width:81%;
 	height:300px;
 	border:1px solid black;
 	background-color: #bdc3c7;
