--- a/cv-css.css
+++ b/cv-css.css
@@ -35,5 +35,15 @@ body {
 
 h1{
 	text-decoration: underline;
-	 color: red;
- }
+	color: red;
+}
+p {text-decoration: underline}
+.droite2 {
+	float: left;
+	top:0;
+	right:0;
+	width:81%;
+	height:300px;
+	border:1px solid black;
+	background-color: #bdc3c7;
+	text-align: center ;}
