--- a/cv-css.css
+++ b/cv-css.css
@@ -35,9 +35,8 @@ body {
 
 h1{
 	text-decoration: underline;
-	color: red;
+	color:red;
 }
-p {text-decoration: underline}
 .droite2 {
 	float: left;
 	top:0;
@@ -45,5 +44,5 @@ p {text-decoration: underline}
 	width:81%;
 	height:300px;
 	border:1px solid black;
-	background-color: #bdc3c7;
-	text-align: center ;}
+	text-align: center ;
+	background-color: #bdc3c7}
