--- a/cv-css.css
+++ b/cv-css.css
@@ -1,7 +1,6 @@
 body {
-	background-color: #5929BA;
+	background-color: rgba(0,0 , 25, 0.15);
 }
-
 .gauche {
 	float: left;
 	width: 240px;
@@ -18,19 +17,17 @@ body {
 	width: 240px;
 	height: auto;
 	border: 1px solid black;
-	background-color: #7A42A6;
-
+	background-color: rgba(0,0 , 25, 0.08);
 }
-
 .droite {
 	float: left;
 	top:0;
 	right:0;
 	width:81%;
 	height:300px;
-	border:1px solid black;
-	background-color: #bdc3c7;
+	background-color: rgba(0, 0, 25,0.08);;
 	text-align: center ;
+	border: 1px solid black;
 }
 
 h1{
@@ -42,7 +39,7 @@ h1{
 	top:0;
 	right:0;
 	width:81%;
-	height:300px;
-	border:1px solid black;
+	height:268px;
+	border: 1px solid black;
 	text-align: center ;
-	background-color: #bdc3c7}
+	background-color: rgba(0, 0, 25, 0.08);}
