--- a/cv-css.css
+++ b/cv-css.css
@@ -1,5 +1,7 @@
 body {
 	background-color: rgba(0,0 , 25, 0.15);
+	background-image:linear-gradient(red 30%, grey 50%);
+	background-image:linear-gradient(to right, grey 10%, black 100%);
 }
 .gauche {
 	float: left;
@@ -54,7 +56,7 @@ h1{
 		background-color:#729EBF;
 		background-image:-webkit-linear-gradient(top, #729EBF 0%, #333A40 100%);
 		background-image: linear-gradient(to bottom, #729EBF 0%, #333A40 100%);
-		border-radius: 4px;
+		border-radius: 3px;
 		margin-bottom:5px;
 		box-shadow: 3px 3px 3px #999;
 		border:solid 1px #333A40
